--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header a{
 body{
   background: hsl(0, 0%, 95%);
   font-family: 'Montserrat', sans-serif;
-  padding: 20px;
+  margin-top: 20px;
 }
 
 h3{
@@ -22,16 +22,18 @@ h3{
 }
 
 .container{
-  width: 75%;
+  width: auto;
   margin: 5em auto;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 .container div{
-  padding: 2em 0em 2em 2em;
+  padding: 2em 5em 2em 2em;
 }
 
 .container p{
@@ -88,7 +90,11 @@ button:hover{
 
 @media only screen and (max-width: 376px){
   .container{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px 30px 30px;
   }
 
   .sedans{
